updates to keep up with staticdocs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ S3method(to_rst,"if")
 S3method(to_rst,COMMENT)
 S3method(to_rst,LIST)
 S3method(to_rst,RCODE)
-S3method(to_rst,Rd)
+S3method(to_rst,Rd_content)
 S3method(to_rst,Rd_doc)
 S3method(to_rst,S3method)
 S3method(to_rst,S4method)
@@ -86,8 +86,6 @@ importFrom(knitr,knit)
 importFrom(markdown,markdownToHTML)
 importFrom(staticdocs,as.sd_package)
 importFrom(staticdocs,render_page)
-importFrom(stringr,str_c)
-importFrom(stringr,str_match)
 importFrom(tools,buildVignettes)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
